"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

BRANCH CHECKLIST: code review TODO/FIXME through all prsim code!

2008-10-14	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-11:
	  Tons of simple little bugs fixed, still much more to go.
		Many easy bugs related to incorrect assertions due to
		local indexing vs. global indexing.  
	  Most regression tests in prsim/ still die on 
		crashes and assert fails.  


2008-10-12	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-10:
	  Ton of minor fixes during debugging, successfully simulated
		one hierarchical inverter (parser/prs/inv-14)!!!
		Details: expression allocation fixes, initialization fixes, 
		local-global translation fixes, expression propagation fixes,
		structural coherence fixes, dump-strict enhancements
		For now, node_fanin array is vector (bigger than valarray)
		Moved evaluation_return_type to State-prsim.cc
		faninout_struct_type no longer nested in unique_process_subgf.
	  Next: continue debugging bigger tests until no regressions, 
		accurate memory statistics.
	  cleanup: remove State::__scratch_expr_trace, 
		pass evaluate_return_type by ref instead of returning copy


2008-10-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-09:
	  Turned on PRSIM_INDIRECT_EXPRESSION_MAP! (beginning to debug...)
		ExprAlloc visitors adjusted to use local node indices
			where appropriate, properly presize the local node
			fanin/out structure array by footprint_frame, 
			fixed ::link_node_to_root_expr()
		State-prsim: distinguish FIRST_VALID_GLOBAL_* indices
			from FIRST_VALID_LOCAL_* indices, 
			removed false nonzero assertion checks
	  Basic inverter process passes structural testing!
		Then the events don't quite work right yet...

